Record 생성 삭제 api 구현
